--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
 main {
-    background-color: green;
+    display: inline-block;
+    border: 1px solid red;
+}
+
+main > div {
+    float: left;
+    width: 50%;
+    padding: 8px;
+    border: 3px solid green;
 }
