--- a/css/base.css
+++ b/css/base.css
@@ -9,3 +9,12 @@ body * {
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 800px;
+    margin: 20px calc((50% - 400px));
+}
+
