--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,32 @@
-main {
-    display: inline-block;
-    border: 1px solid red;
+main.container {
+    min-height: calc(100vh - 160px);
 }
 
-main > div {
-    float: left;
+.column {
     width: 50%;
-    padding: 8px;
-    border: 3px solid green;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;    
+}
+
+.main-title {
+    font-size: 64px;
+    line-height: 48px;
+    color: black;
+    text-transform: uppercase;
+}
+
+.description {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.btn {
+    background-color: blue;
+    color: white;
+    padding: 8px 30px;
+    font-size: 18px;
+    text-decoration: none;
+    border-radius: 4px;
 }
