--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ main.container {
 .main-title {
     font-size: 64px;
     line-height: 48px;
-    color: black;
+    color: #180D77;
     text-transform: uppercase;
 }
 
