--- a/css/footer.css
+++ b/css/footer.css
@@ -4,11 +4,10 @@
 }
 
 .social-list > .icon {
-    width: 40px;
-    height: 40px;
-    background-color: lightblue;
+    font-size: 24px;
+    color: #180D77;
+    text-decoration: none;
 }
-
 
 .copyright {
     font-style: italic;
