--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,17 @@ main.container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 40px;    
+    gap: 40px;
+}
+
+.fa-close {
+    font-size: 40px;
+    width: 40px;
+    height: 40px;
+    background-color: red;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
 }
 
 .main-title {
@@ -29,4 +39,14 @@ main.container {
     font-size: 18px;
     text-decoration: none;
     border-radius: 4px;
+}
+
+.hero {
+    position: fixed;
+    z-index: -1;
+    inset: 0;
+    background-image: url(../img/hero.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: right bottom;
 }
