--- a/css/base.css
+++ b/css/base.css
@@ -1,20 +1,86 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url('../Roboto/Roboto-Regular.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('../Roboto/Roboto-Bold.ttf');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('../Roboto/Roboto-Italic.ttf');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('../Roboto/Roboto-BoldItalic.ttf');
+    font-weight: bold;
+    font-style: italic;
+}
+
+div {
+    font-family: Roboto;
+    font-weight: bold;
+    font-style: italic;
+}
+
 body,
 body * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    line-height: 120%;
+    vertical-align: top;
+    box-sizing: border-box;
 }
 
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+        sans-serif;
 }
 
 .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 800px;
-    margin: 20px calc((50% - 400px));
+    width: 1000px;
+    margin: 20px calc(50% - 500px);
 }
 
+@media (max-width: 1100px) {
+    .container {
+        width: 800px;
+        margin: 20px calc(50% - 400px);
+    }
+}
+
+@media (max-width: 900px) {
+    .container {
+        width: 600px;
+        margin: 20px calc(50% - 300px);
+    }
+}
+
+@media (max-width: 700px) {
+    .container {
+        width: 400px;
+        margin: 20px calc(50% - 200px);
+    }
+
+    .main-nav > .link {
+        display: none;
+    }
+}
+
+@media (max-width: 460px) {
+    .container {
+        width: 100%;
+        margin: 20px 0;
+    }
+}
